--- a/src/Product.css
+++ b/src/Product.css
@@ -5,11 +5,17 @@
     justify-content: flex-end;
     margin: 10px;
     padding: 20px;
-    width: 100%;
+    width: 300px;
     max-height: 400px;
     min-width: 100px;
     background-color: white;
     z-index: 1;
+}
+
+.product__rating {
+    display: flex;
+    color: gold;
+    margin-bottom: 20px;
 }
 
 .product__img {
@@ -17,4 +23,22 @@
     width: 100%;
     object-fit: contain;
     margin-bottom: 15px;
+}
+
+.product_info {
+    margin-top: 5px;
+}
+
+.product_price {
+    height: 100px;
+    margin-bottom: 15px;
+}
+
+.product__button {
+    background: #f0c14b;
+    border: 1px solid;
+    margin-top: 10px;
+    border-color: #a88734 #9c7e31 #b46a29;
+    color: #111;
+    margin-right: 50%;
 }
