--- a/src/Header.css
+++ b/src/Header.css
@@ -14,6 +14,7 @@
     margin: 0 20px;
     margin-top: 0px;
     margin-right: 10px;
+    cursor: pointer;
 }
 
 .header_search {
@@ -34,6 +35,7 @@
     padding: 5px;
     height: 20px !important;
     background-color: #cd9042;
+    cursor: pointer;
 }
 
 .header_optionLineOne {
@@ -67,4 +69,5 @@
     margin-left: 10px;
     margin-right: 10px;
     color: white;
+    cursor: pointer;
 }
