--- a/src/Header.css
+++ b/src/Header.css
@@ -33,9 +33,10 @@
 
 .header_searchIcon {
     padding: 5px;
-    height: 20px !important;
+    height: 24px !important;
     background-color: #cd9042;
     cursor: pointer;
+    border-radius: 3px;
 }
 
 .header_optionLineOne {
@@ -51,6 +52,7 @@
     display: flex;
     align-items: center;
     color: white;
+    cursor: pointer;
 }
 
 .header_basketCount {
