--- a/src/Subtotal.css
+++ b/src/Subtotal.css
@@ -3,11 +3,12 @@
     flex-direction: column;
     justify-content: space-between;
     width: 300px;
-    height: 100px;
+    height: 150px;
     padding: 20px;
     background-color: #f3f3f3;
     border: 1px solid #dddddd;
     border-radius: 3px;
+    margin-left: 20px;
 }
 
 .subtotal__gift {
@@ -16,7 +17,7 @@
 }
 
 .subtotal__gift > input {
-    margin-right: 5px;
+    margin-right: 7px;
 }
 
 .subtotal > button {
@@ -25,11 +26,12 @@
     width: 100%;
     height: 30px;
     border: 1px solid;
-    margin-top: 10px;
+    margin-top: 20px;
     border-color: #a88734 #9c7e31 #846a29;
     color: #111;
+    cursor: pointer;
 }
 
-.subtotal > input {
+.gift__checkbox {
     cursor: pointer;
 }
