--- a/src/Product.css
+++ b/src/Product.css
@@ -1,6 +1,6 @@
 .product {
     display: flex;
-    felx-direction: column;
+    flex-direction: column;
     align-items: center;
     justify-content: flex-end;
     margin: 10px;
